# serializer version: 1
# name: test_get_wine_environment
  dict({
    'LD_LIBRARY_PATH': '/lib32:/usr/wine/wine-tkg/lib/wine',
    'LIBGL_DRIVERS_PATH': '/lib32/dri',
    'PIPEWIRE_MODULE_DIR': '/usr/lib/pipewire-0.3:/lib32/pipewire-0.3',
    'SPA_PLUGIN_DIR': '/usr/lib/spa-0.2:/lib32/spa-0.2',
    'WINEPREFIX': Path('/my/wine/prefix'),
  })
# ---
# name: test_install_wine_trick[Popen]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/wine/winetricks'),
          '-q',
          'some_trick',
        ]),
      ),
      dict({
        'env': dict({
          'HOME': '/userdata/system',
          'LD_LIBRARY_PATH': '/lib32:/usr/wine/wine-tkg/lib/wine',
          'PATH': '/usr/wine/wine-tkg/bin:/bin:/usr/bin',
          'WINEPREFIX': Path('/path/to/wine/prefix'),
        }),
        'stderr': -1,
        'stdout': -1,
      }),
    ),
  ])
# ---
# name: test_install_wine_trick[logging]
  list([
    tuple(
      'configgen.utils.wine',
      10,
      "command: [PosixPath('/usr/wine/winetricks'), '-q', 'some_trick']",
    ),
    tuple(
      'configgen.utils.wine',
      10,
      'out',
    ),
    tuple(
      'configgen.utils.wine',
      40,
      'err',
    ),
  ])
# ---
# name: test_install_wine_trick_environment[Popen]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/wine/winetricks'),
          '-q',
          'some_trick',
        ]),
      ),
      dict({
        'env': dict({
          'FOO': 'BAR',
          'HOME': '/userdata/system',
          'LD_LIBRARY_PATH': '/lib32:/usr/wine/wine-tkg/lib/wine',
          'PATH': '/usr/wine/wine-tkg/bin:/bin:/usr/bin',
          'WINEPREFIX': Path('/path/to/wine/prefix'),
        }),
        'stderr': -1,
        'stdout': -1,
      }),
    ),
  ])
# ---
# name: test_regedit[Popen]
  _CallList([
    _Call(
      tuple(
        list([
          Path('/usr/wine/wine-tkg/bin/wine'),
          'regedit',
          Path('/path/to/some/regedit/file.regedit'),
        ]),
      ),
      dict({
        'env': dict({
          'HOME': '/userdata/system',
          'LD_LIBRARY_PATH': '/lib32:/usr/wine/wine-tkg/lib/wine',
          'PATH': '/usr/wine/wine-tkg/bin:/bin:/usr/bin',
          'WINEPREFIX': Path('/path/to/wine/prefix'),
        }),
        'stderr': -1,
        'stdout': -1,
      }),
    ),
  ])
# ---
# name: test_regedit[logging]
  list([
    tuple(
      'configgen.utils.wine',
      10,
      "command: [PosixPath('/usr/wine/wine-tkg/bin/wine'), 'regedit', PosixPath('/path/to/some/regedit/file.regedit')]",
    ),
    tuple(
      'configgen.utils.wine',
      10,
      'out',
    ),
    tuple(
      'configgen.utils.wine',
      40,
      'err',
    ),
  ])
# ---
